fix(source) alignment issues, both blueprint and deployment CFY-3842

--- a/app/styles/_source.scss
+++ b/app/styles/_source.scss
@@ -1,21 +1,16 @@
+.source {
 
-#blueprint-source{
-
-
-
-    $TREE_WIDTH:300px;
-
-    .source-content{
+    .source-content {
 
         .tree {
-            overflow-x:auto;
-            overflow-y:hidden;
-            float:left;
-            width:20%;
+            overflow-x: auto;
+            overflow-y: hidden;
+            float: left;
+            width: 20%;
             font-size: 13px;
             min-height: 20px;
-            padding-top:40px;
-            padding-left:20px;
+            padding-top: 40px;
+            padding-left: 20px;
             li {
                 list-style-type: none;
                 margin: -3px 0 -5px 25px;
@@ -27,7 +22,7 @@
                 left: -20px;
                 position: absolute;
                 right: auto;
-                border:0;
+                border: 0;
             }
 
             li::before {
@@ -63,8 +58,8 @@
                 height: 30px;
             }
 
-            li.parent_li > span:hover{
-                &, &  + ul li span{
+            li.parent_li > span:hover {
+                &, & + ul li span {
                     background: #eee;
                     border: 1px solid #94a0b4;
                     color: #000;
@@ -74,13 +69,14 @@
         }
 
         .sourcecode {
-            float:right;
-            width:78%;
-            .pre{
-                margin:0;
-                .syntaxhighlighter{
-                    margin-bottom:0 !important;
-                }
+            float: right;
+            width: 78%;
+            .pre {
+                font-size: 13px;
+                margin-left: 20px;
+                border: 1px solid #cccccc;
+                border-radius: 4px;
+                background-color: #fff;
             }
             //          p.empty {
             //              display: block;
@@ -109,18 +105,18 @@
 }
 
 .syntaxhighlighter {
-  .container {
-    &::before, &::after {
-      content: normal !important;
-      display: inline !important;
+    .container {
+        &::before, &::after {
+            content: normal !important;
+            display: inline !important;
+        }
     }
-  }
-  .gutter {
-    .line {
-      border-right: 3px solid #29aaee !important;
+    .gutter {
+        .line {
+            border-right: 3px solid #29aaee !important;
+        }
     }
-  }
-  table {
-    overflow-x: hidden !important;
-  }
+    table {
+        overflow-x: hidden !important;
+    }
 }
