--- a/app/styles/deployments/_deploymentLayout.scss
+++ b/app/styles/deployments/_deploymentLayout.scss
@@ -14,7 +14,7 @@
         }
 
         .header-left {
-            min-height: 112px;
+            margin-bottom: 10px;
 
             #settings-button {
                 display: inline-block;
